Network Policy/netpol-po-svc.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: nginx
    resources: {}
    ports:
    - name: http
      containerPort: 80
      protocol: TCP

---
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-svc
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: v1 
kind: Pod 
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: nginx
    resources: {}
    ports:
    - containerPort: 80
      protocol: TCP
      name: http

---
apiVersion: v1 
kind: Service 
metadata:
  name: backend-svc
  labels:
    app: backend  
spec: 
  selector:
    app: backend  
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: v1 
kind: Pod 
metadata: 
  name: db
  labels:
    app: mysql
spec:
  containers:
  - name: db-mysql
    image: mysql
    resources: {}
    ports:
    - name: http
      containerPort: 3306
      protocol: TCP

---
apiVersion: v1 
kind: Service 
metadata:
  name: db-svc
  labels:
    app: db
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
